Bugfix/code quality (#186)
* replace Collectors.toList with Stream.toList

* remove unnecessary null check

* code formatting

* eplace usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList() and other minor cleanup

* format code